--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
                 <p class="digitalmp text-uppercase">Maximized & Efficient engagement</p>
                 
                 <div class="digitalmrow row">
-                <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
+                <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8 col-sm-12 col-md-12">
                     <img class="digitalmimg" src="img\Web_DMScreens.png">
                 </div>
-                <div class="digitalmptextbtn col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                <div class="digitalmptextbtn col-sm-4 col-md-4 col-lg-4 col-xl-4 col-sm-12 col-md-12">
                     <p class="digitalmtext">
                         Many businesses get stuck with digital media because they know they should be participating
                         but are unsure how to engage. <br><br>
@@ -548,6 +548,7 @@
                             </button>
                         </div>
                     -->
+                    
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
