--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
             <nav class="navbar navbar-expand-sm bg-light navbar-light">
                 <div class="text-center navv container text-uppercase">
-                 <!--<a class="navbar-brand" href="#"><img class="weblogo" src="img\Web_Logo.png"></a>-->
-                
+                 <a class="navbar-brand navbar-toggler logosm" href="#"><img class="weblogo" src="img\Web_Logo.png"></a>
+                <!--
                     <button class="navbar-toggler logosm" data-toggle="collapse">
                         <span> <img class="weblogo" src="img\Web_Logo.png"></a></span>
-                    </button>
+                    </button>-->
                     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -280,7 +280,7 @@
 
 <!--FRIENDS SECTION-->
 
-        <section class="section">
+        <section class="section f-section">
 
             <div class="text-center container">
             <div class="friends-section-textbox"><br>
@@ -338,7 +338,6 @@
                 </div>
             </div>
 
-            <br> <br> <br> <br> <br>
 <!--
                 <div class="row tnds" >
                     <div class="">
