--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="offersSection row text-center">
                 <!--Marketing Bootcamps-->
                 <div class="offers0-1 col-sm">
-                    <div class="offers1">
+                    <div class="offers offers1">
                         Marketing<p class="offers1_2"> Bootcamps</p>
                     </div>
                     <div class="offersheading text-uppercase">
@@ -171,14 +171,14 @@
                 </div>
 
                 <!--Marketing Plans-->
-                <div class="offers0-2 col-sm">
-                    <div class="offers2">
-                        Marketing <p class="offers2_2"> Plans</p>
+                <div class="offers0-1 col-sm">
+                    <div class="offers offers2">
+                        Marketing <p class="offers1_2"> Plans</p>
                     </div>
                     <div class="offersheading text-uppercase">
                         Road-maps for growth
                     </div> <br>
-                    <div class="offers2_text">
+                    <div class="offers1_text">
                         A marketing plan must serve as a roadmap to 'winning' in the marketplace and achieving visible
                         results.
                         <br><br>
@@ -191,20 +191,20 @@
                     </div>
                     
                     <div class="col-sm mt-6" >
-                <a href="#" class="offers2_btn text-uppercase btn mb-4">get started</a>
+                <a href="#" class="offers1_btn text-uppercase btn mb-4">get started</a>
             </div>
                 </div>
 
                 <!--Project Management-->
 
-                <div class="offers0-3 col-sm">
-                    <div class="offers3">
-                        Project <p class="offers3_2"> Management </p>
+                <div class="offers0-1 col-sm">
+                    <div class="offers offers3">
+                        Project <p class="offers1_2"> Management </p>
                     </div>
                     <div class="offersheading text-uppercase">
                         sustaining quality growth
                     </div> <br>
-                    <div class="offers3_text">
+                    <div class="offers1_text">
                         Your business may have grown to a stage where you need a marketing department to help
                         co-ordinate marketing efforts and activites.
                         <br><br>
@@ -217,7 +217,7 @@
 
                     
                     <div class="col-sm mt-6">
-                <a href="#" class="offers3_btn text-uppercase btn">get started</a>
+                <a href="#" class="offers1_btn text-uppercase btn">get started</a>
             </div>
 
                 </div>
